@@ -1,5 +1,10 @@
 2006-09-03 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc: check if dest >= src before starting a copy
+
+2006-09-03 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* src/GParted_Core.cc: fixed an issue with copying to unallocated
 	  space. It works fine now, but this entire copy operation breaks
 	  consistency a bit. I should take a look at that when i have some
